Update Edit Course
Update Edit Course

--- a/final-project-fe/Pages/Index.cshtml
+++ b/final-project-fe/Pages/Index.cshtml
@@ -52,10 +52,10 @@
 													<i class="ti-user"></i>
 													<a href="#" title="">friends</a>
 												</li>*@
-											<li style="display:flex">
+											@* <li style="display:flex">
 												<i class="bi bi-mortarboard"></i>
 												<a asp-page="/Mentor/MentorPage/Index" title="">Courses</a>
-											</li>
+											</li> *@
 											<li>
 												<i class="ti-image"></i>
 												<a href="#" title="">images</a>
